编码修改